[project]
name = "filmot"
version = "0.0.1"
description = "filmot.com API"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["filmot"]
classifiers=[
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests",
    "prettytable",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "build",
    "twine",
    "black",
    "flake8",
    "mypy",
    "isort",
    "pre-commit",
]

[project.urls]
"Homepage" = "https://github.com/dusking/filmot"
"Bug Reports" = "https://github.com/dusking/filmot/issues"
"Source" = "https://github.com/dusking/filmot.git"

[tool.black]
line-length = 120
ignore = "E203"
